--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lieferkarte Deutschland</title>
 
-  <!-- Leaflet für Karte -->
+  <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-
-  <!-- PDF.js -->
-  <script src="https://unpkg.com/pdfjs-dist/build/pdf.min.js"></script>
 
   <!-- Style -->
   <link rel="stylesheet" href="style.css"/>
@@ -21,6 +17,11 @@
 
   <div id="map"></div>
 
+  <!-- Leaflet JS -->
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <!-- PDF.js -->
+  <script src="https://unpkg.com/pdfjs-dist/build/pdf.min.js"></script>
+  <!-- App JS -->
   <script src="app.js"></script>
 </body>
 </html>
